--- a/resources/app-templates/leocdp-admin/modules/analytics/cx-analytics-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/cx-analytics-dashboard.html
@@ -470,7 +470,7 @@
         <div class="col-md-2 text-nowrap survey_item_summary" id="fsrs_<%- id %>">
             <div class="highlight_text">
                 <div id="fs_star_<%- id %>" class="text-center"></div>
-                <div class="small"> Average Score: <mark style="font-weight:bold;font-size: 1.1em;">  <%- avgFeedbackScore %> </mark> </div>
+                <div class="small"> Average CX Score: <mark style="font-weight:bold;font-size: 1.1em;">  <%- avgFeedbackScore %> </mark> </div>
                 <div class="small"> Total Profile: <%- (profileCount).toLocaleString() %>
                 </div>
                 <div class="small"> Total Response: <%- (surveyCount).toLocaleString() %>
@@ -479,18 +479,6 @@
             </div>
             <div class="small">
                 <%- timePeriod %>
-            </div>
-            <div class="small">
-                <%- group %>
-            </div>
-            <div class="small">
-                <%- evaluatedObject %>
-            </div>
-            <div class="small">
-                <%- evaluatedItem %>
-            </div>
-            <div class="small">
-                <%- evaluatedPerson %>
             </div>
         </div>
         <div class="col-md-10">
