--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-info.html
@@ -857,7 +857,7 @@
 
 			<ul>
 			<% _.forOwn(eventData, function(value, key) { %>
-				<li> <%= key %> : <%= value %> </li>
+				<li> <%- key %> : <%- value %> </li>
 			<% }) %>
 			<ul>
 			</span> 
@@ -886,7 +886,7 @@
 
 			<ul>
 			<% _.forOwn(eventData, function(value, key) { %>
-				<li> <%= key %> : <%= value %> </li>
+				<li> <%- key %> : <%- value %> </li>
 			<% }) %>
 			<ul>
 			</span> 
@@ -915,7 +915,7 @@
 			
 			<ul>
 			<% _.forOwn(eventData, function(value, key) { %>
-				<li> <%= key %> : <%= value %> </li>
+				<li> <%- key %> : <%- value %> </li>
 			<% }) %>
 			<ul>
 			</span> 
@@ -945,7 +945,7 @@
 			
 			<ul>
 			<% _.forOwn(eventData, function(value, key) { %>
-				<li> <%= key %> : <%= value %> </li>
+				<li> <%- key %> : <%- value %> </li>
 			<% }) %>
 			<ul>
 			</span> 
