--- a/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/segment-builder.html
@@ -8,10 +8,10 @@
 		<button type="button" class="btn btn-info" onclick="history.back()"> 
 			<i class="fa fa-arrow-circle-left" aria-hidden="true"></i> Back 
 		</button>
-		<button type="button" class="btn btn-danger data-control-delete" > 
+		<button type="button" class="btn btn-danger data-control-delete" title="Delete this segment"> 
 			<i class="fa fa-trash" aria-hidden="true"></i> Delete 
 		</button>
-		<button type="button" class="btn btn-success" onclick="saveSegment()"> 
+		<button type="button" class="btn btn-success" onclick="saveSegment()" title="Save" > 
 			<i class="fa fa-check-square-o" aria-hidden="true"></i> Save 
 		</button>
 	</div>
