--- a/resources/app-templates/leocdp-admin/modules/activation/data-connector-list.html
+++ b/resources/app-templates/leocdp-admin/modules/activation/data-connector-list.html
@@ -300,7 +300,7 @@
 			<div class="modal-header">
 				<h4 class="modal-title text-center" > Data Connector Information </h4>
 			</div>         
-			<div class="modal-body row">
+			<div class="modal-body">
 			
 				<div class="row form-group">
 					<label  class="control-label col-md-3" for="connectorName" > Name </label>
