--- a/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
+++ b/resources/app-templates/leocdp-admin/modules/analytics/main-dashboard.html
@@ -36,14 +36,14 @@
 			</div>
 			<div class="col-md-4">
             	<div class="panel panel-business">
-            		<div class="panel-heading"> <h3 class="panel-title text-center"> Key Business Metrics in Total</h3> </div>
+            		<div class="panel-heading"> <h3 class="panel-title text-center"> Business Metrics in Total</h3> </div>
 				  	<div class="panel-body" id="sales_metrics_holder" >
 				  	</div>
 				</div>
 			</div>
 			<div class="col-md-4">
             	<div class="panel panel-cx">
-            		<div class="panel-heading"> <h3 class="panel-title text-center"> Customer Experience Metrics in Total</h3> </div>
+            		<div class="panel-heading"> <h3 class="panel-title text-center"> Experience Metrics in Total</h3> </div>
 				  	<div class="panel-body" id="cx_metrics_holder" >
 				  	</div>
 				</div>
@@ -101,14 +101,14 @@
         <!-- holder for Total Customer Statistics and Total Event Statistics -->
         <div class="col-md-4 "> 
         	<div class="chart_box">
-	        	<h4 class="highlight_text text-center" > Summary Statistics</h4>
+	        	<h4 class="highlight_text text-center" > Summary Data in Total </h4>
 	            <div class="summary_metric">
 	                <div class="vcenter" id="profile_total_stats" >
 	 					<!--  Summary: profile, segment, revenue -->
 	                </div>
 	            </div>
 	            
-	            <h4 class="highlight_text text-center" > Total Event Statistics </h4>
+	            <h4 class="highlight_text text-center" > Event Statistics in Total </h4>
 	            <div class="summary_metric">
 	                <div class="vcenter" id="event_total_stats" >
 	                    <!--  Events -->
