--- a/resources/content-templates/email-product-recommendation.html
+++ b/resources/content-templates/email-product-recommendation.html
@@ -388,7 +388,7 @@
                 <tr>
                   <td class="content-block">
                     <span class="apple-link"> Your company address </span>
-                    <br> Don't like these emails? <a href="http://i.imgur.com/CScmqnj.gif">Unsubscribe</a>.
+                    <br> Don't like these emails? <a href="#">Unsubscribe</a>.
                   </td>
                 </tr>
                 <tr>
