--- a/resources/app-templates/leocdp-admin/main-view.html
+++ b/resources/app-templates/leocdp-admin/main-view.html
@@ -167,7 +167,7 @@
 				    <div class="panel-body" style="font-size: 11px;" >
 				    	<div>
 				    		<b> <a href="https://leocdp.com" target="_blank" > LEO <span id="leo_product_type" ></span> </a> <span id="leocdp_version_type" ></span> Edition </b> <br>
-				    		Version: <b><span id="leocdp_version_number" ></span></b>
+				    		ID: <b><span id="leocdp_version_number" ></span></b>
 				    	</div>
 				    	<div>
 				    		<b> Powered by</b> <br>
