--- a/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
+++ b/resources/app-templates/leocdp-admin/modules/customer/customer-profile-list.html
@@ -43,7 +43,7 @@
 			<div class="col-md-6" style="background-color:#f5f5f5; border-radius: 5px;padding-top: 5px"> 
 				<div class="col-md-12">
 					<label title="Filter all profiles that have mobile phone or email" > 
-							<input id="filterOnlyContactable" type="checkbox" > Filter contact profiles  
+							<input id="filterOnlyContactable" type="checkbox" onchange="filterOnlyContactableProfiles(this)" > Filter contact profiles  
 					</label>
 				</div> 
 				<div class="col-md-12">
@@ -161,6 +161,12 @@
     	} 
     	$('#profile-list').DataTable().clear();
 	    $('#profile-list').DataTable().ajax.reload();
+	}
+	
+	function filterOnlyContactableProfiles(node){
+		if($(node).prop('checked')) {
+			toggleProfileDisableDateFilter(true);
+		} 
 	}
 	
 	function resetProfileSearch() {
